@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.10 2004/02/10 06:47:41 minskim Exp $
+# $NetBSD: Makefile,v 1.11 2004/02/10 17:05:54 minskim Exp $
 #
 
-DISTNAME=		nabi-0.12
-PKGREVISION=		1
+DISTNAME=		nabi-0.13
 CATEGORIES=		korean inputmethod
 MASTER_SITES=		http://download.kldp.net/nabi/
 
@@ -14,12 +13,6 @@ USE_BUILDLINK3=		YES
 USE_X11=		YES
 GNU_CONFIGURE=		YES
 USE_PKGLOCALEDIR=	YES
-
-SUBST_CLASSES+=		options
-SUBST_MESSAGE.options=	"Removing incompatible compiler options."
-SUBST_STAGE.options=	post-patch
-SUBST_FILES.options=	IMdkit/Makefile.in src/Makefile.in
-SUBST_SED.options=	-e 's,-Wall,,g'
 
 .include "../../converters/libiconv/buildlink3.mk"
 .include "../../devel/gettext-lib/buildlink3.mk"
