@@ -1,6 +1,7 @@
-@comment $NetBSD: PLIST,v 1.1.1.1 2003/09/27 03:23:33 junyoung Exp $
+@comment $NetBSD$
 bin/nabi
 ${PKGLOCALEDIR}/locale/ko/LC_MESSAGES/nabi.mo
+share/nabi/candidate/nabi.txt
 share/nabi/compose/default
 share/nabi/keyboard/2qwerty
 share/nabi/keyboard/32qwerty
@@ -14,9 +15,9 @@ share/nabi/themes/KingSejong/none.png
 share/nabi/themes/MSWindows/english.png
 share/nabi/themes/MSWindows/hangul.png
 share/nabi/themes/MSWindows/none.png
-share/nabi/themes/MSWindows2000/english.png
-share/nabi/themes/MSWindows2000/hangul.png
-share/nabi/themes/MSWindows2000/none.png
+share/nabi/themes/MSWindowsXP/english.png
+share/nabi/themes/MSWindowsXP/hangul.png
+share/nabi/themes/MSWindowsXP/none.png
 share/nabi/themes/Mac/README
 share/nabi/themes/Mac/english.png
 share/nabi/themes/Mac/hangul.png
@@ -36,10 +37,11 @@ share/nabi/themes/keyboard/none.png
 @dirrm share/nabi/themes/SimplyRed
 @dirrm share/nabi/themes/Onion
 @dirrm share/nabi/themes/Mac
-@dirrm share/nabi/themes/MSWindows2000
+@dirrm share/nabi/themes/MSWindowsXP
 @dirrm share/nabi/themes/MSWindows
 @dirrm share/nabi/themes/KingSejong
 @dirrm share/nabi/themes
 @dirrm share/nabi/keyboard
 @dirrm share/nabi/compose
+@dirrm share/nabi/candidate
 @dirrm share/nabi
